# cerberus-project_old

./: .clang-format  .clang-tidy  .cmake-rules  CMakeLists.txt  README.md
analysis/: CMakeLists.txt
analysis/catch/lex/: char.cpp  lexical.cpp  lexical_analyzer.cpp
analysis/catch/lex/item/: item.cpp  regex_parser.cpp
analysis/catch/lexical/: bracket_finder.cpp  char.cpp  char.hpp  generator_for_text.cpp  generator_for_text.hpp  lexical.cpp  lexical_analyzer.cpp  lexical_analyzer.hpp  location.cpp  location.hpp  string_parser.cpp  string_parser.hpp  string_to_codes.cpp  text_generator.cpp  text_generator.hpp  token.cpp  token.hpp
analysis/catch/lexical/item/: item.cpp  regex_parser.cpp
analysis/catch/text/: bracket_finder.cpp  generator_for_text.cpp  string_to_codes.cpp
analysis/catch/text_scan_assistance/: bracket_finder.cpp  generator_for_text.cpp
analysis/catch/text_scan_assistance/scan_api_modules/: comment_skipper.cpp
analysis/include/cerberus/analysis/: analysis_basic_exception.hpp  analysis_exception.hpp
analysis/include/cerberus/lex/: analysis_exception.hpp  bracket_finder.hpp  char.hpp  generator_for_text.hpp  input_analyzer.hpp  lexical_analysis_exception.hpp  lexical_analyzer.hpp  location_in_file.hpp  scan_api.hpp  string_reducer.hpp  string_to_codes.hpp  text_generator.hpp  token.hpp
analysis/include/cerberus/lexical/: char.hpp  dot_item.hpp  dot_item_object.hpp  file_location.hpp  generator_for_text.hpp  lexical_analyzer.hpp  lexical_exceptions.hpp  location.hpp  sequence.hpp  sequence_parser.hpp  string_parser.hpp  string_sequence.hpp  text_generator.hpp  token.hpp
analysis/include/cerberus/text/: bracket_finder.hpp  generator_for_text.hpp  location_in_file.hpp  scan_api.hpp  string_reducer.hpp  string_to_codes.hpp  text_exception.hpp
analysis/include/cerberus/text_scan_assistance/: bracket_finder.hpp  generator_for_text.hpp  location_in_file.hpp  scan_api.hpp  string_reducer.hpp  string_to_codes.hpp  text_exception.hpp
analysis/src/: analysis_exception.cpp
analysis/src/lex/: bracket_finder.cpp  generator_for_text.cpp  lexical_analyzer.cpp  scan_api.cpp  string_to_codes.cpp
analysis/src/lex/item/: basic_item.cpp  item.cpp  item_parser.cpp  regex.cpp  regex_parser.cpp  string.cpp
analysis/src/text/: bracket_finder.cpp  generator_for_text.cpp  scan_api.cpp  string_to_codes.cpp
analysis/src/text/generator_modules/: tabs_and_spaces_saver.cpp
libcerberus/: CMakeLists.txt
libcerberus/catch/: bit.cpp  bit.hpp  bitmap.cpp  bitmap.hpp  catch.hpp  cerberus.cpp  enum.cpp  enum.hpp  flat_map.cpp  flat_map.hpp  for_each.cpp  for_each.hpp  lazy_executor.cpp  main.cpp  memory.cpp  memory.hpp  pair.cpp  pair.hpp  pointer_wrapper.hpp  range.cpp  string.cpp  string_pool.cpp  string_pool.hpp  string_view.cpp  string_view.hpp
libcerberus/catch/bits/: abs.cpp  abs.hpp  bit.cpp  bit.hpp  bit_scan.cpp  bit_scan.hpp  bitmap.cpp  bitmap.hpp  byte_mask.cpp  const_bitmap.cpp  log2.cpp  log2.hpp  min_max.cpp  min_max.hpp  pow2.cpp  pow2.hpp
libcerberus/catch/format/: format.cpp
libcerberus/catch/memory/: copy.cpp  copy.hpp  equal.cpp  equal.hpp  fill.cpp  fill.hpp  find.cpp  memory.cpp  memory.hpp  pointer_wrapper.cpp  pointer_wrapper.hpp  string.cpp
libcerberus/catch/strings/: string.cpp  string.hpp  string_container.cpp  string_hash.cpp  string_pool.cpp  string_pool.hpp  string_view.cpp  string_view.hpp
libcerberus/include/cerberus/: bit.hpp  bit_manipulation.hpp  bit_pattern.hpp  bitmap.hpp  bits.hpp  byte_mask.hpp  catch.hpp  cerberus.hpp  const_bitmap.hpp  enum.hpp  exception.hpp  features.hpp  flat_map.hpp  lazy_executor.hpp  location.hpp  memory.hpp  number.hpp  pair.hpp  pointer_wrapper.hpp  range.hpp  reference_wrapper.hpp  small_vector.hpp  string_container.hpp  string_hash.hpp  string_pool.hpp  string_view.hpp  type.hpp
libcerberus/include/cerberus/debug/: debug.hpp  location.hpp  (+2 more)
(+47 files in other folders)
